--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesforservices.css">
+  <link rel="stylesheet" href="css/stylesforservices.css">
 
 </head>
 
@@ -73,11 +73,10 @@
       <div class="col-lg-6">
         <div class="infocontentwriting">
           <h2>Content Writing</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec velit eu lacus
-            ornare fringilla non quis mi. Nam scelerisque molestie fermentum. Vestibulum dapibus finibus turpis,
-            nec malesuada justo sollicitudin in. Aliquam et purus tellus. In quis hendrerit mauris, eu mattis justo.
-            Sed a vestibulum libero. Pellentesque augue metus, rhoncus ac auctor quis, pharetra sed ligula.
-            In laoreet consectetur sagittis. Etiam vitae porta arcu.
+          <p>Looking for suitable words that best describe your work? Well you don’t need the best dictionary for
+            that. All you need is the best content writer! Reach out to us for content writing services that let you
+            describe your work in your own words. Being a powerful medium, content can help you expand your
+            reach and popularity.
           </p>
         </div>
       </div>
@@ -95,11 +94,9 @@
       <div class="col-lg-6">
         <div class="infographicdesigning">
           <h2>Graphic Designing</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec velit eu lacus
-            ornare fringilla non quis mi. Nam scelerisque molestie fermentum. Vestibulum dapibus finibus turpis,
-            nec malesuada justo sollicitudin in. Aliquam et purus tellus. In quis hendrerit mauris, eu mattis justo.
-            Sed a vestibulum libero. Pellentesque augue metus, rhoncus ac auctor quis, pharetra sed ligula.
-            In laoreet consectetur sagittis. Etiam vitae porta arcu.
+          <p>Get graphics designed by Word Play and witness the magic of visuals. By enhancing and enriching the
+            user experience, graphics are an essential part of one’s website and business. Connect with WORDPLAY
+            to get served by creative and innovative professionals appointed just for your comfort and convenience.
           </p>
         </div>
       </div>
@@ -112,11 +109,9 @@
       <div class="col-lg-6">
         <div class="infocontentwriting">
           <h2>Social Media Management</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec velit eu lacus
-            ornare fringilla non quis mi. Nam scelerisque molestie fermentum. Vestibulum dapibus finibus turpis,
-            nec malesuada justo sollicitudin in. Aliquam et purus tellus. In quis hendrerit mauris, eu mattis justo.
-            Sed a vestibulum libero. Pellentesque augue metus, rhoncus ac auctor quis, pharetra sed ligula.
-            In laoreet consectetur sagittis. Etiam vitae porta arcu.
+          <p>Willing to go social online? Strategize, simplify, and strengthen your social media presence by
+            collaborating with WORDPLAY and upscale your popularity among social media users. By boosting social
+            media presence, one motivates a boost in their business and increasing growth and success!
           </p>
         </div>
       </div>
@@ -135,11 +130,10 @@
       <div class="col-lg-6">
         <div class="infographicdesigning">
           <h2>Photography</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec velit eu lacus
-            ornare fringilla non quis mi. Nam scelerisque molestie fermentum. Vestibulum dapibus finibus turpis,
-            nec malesuada justo sollicitudin in. Aliquam et purus tellus. In quis hendrerit mauris, eu mattis justo.
-            Sed a vestibulum libero. Pellentesque augue metus, rhoncus ac auctor quis, pharetra sed ligula.
-            In laoreet consectetur sagittis. Etiam vitae porta arcu.
+          <p>A camera is the eyeball of the world that captures the essence of nature. A photograph is a mere
+            reflection of this essence. Hire WORDPLAY for photography services and let us astonish you with the
+            essence of the world and its wonders. Just like a photograph is a reflection of the essence of the world,
+            our work is the reflection of our dedication and commitment!
           </p>
         </div>
       </div>
@@ -152,11 +146,10 @@
       <div class="col-lg-6">
         <div class="infocontentwriting">
           <h2>Web Development</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec velit eu lacus
-            ornare fringilla non quis mi. Nam scelerisque molestie fermentum. Vestibulum dapibus finibus turpis,
-            nec malesuada justo sollicitudin in. Aliquam et purus tellus. In quis hendrerit mauris, eu mattis justo.
-            Sed a vestibulum libero. Pellentesque augue metus, rhoncus ac auctor quis, pharetra sed ligula.
-            In laoreet consectetur sagittis. Etiam vitae porta arcu.
+          <p>Wanting to go digital? Then go on with the search of a superb website name. Leave the rest on us!
+            When it comes to web development services, WORDPLAY has got your back in all aspects. Trust us with
+            your hopes and we are sure to make your dreams come true. Join WORDPLAY today to avail web
+            development services and more.
           </p>
         </div>
       </div>
@@ -167,19 +160,19 @@
   </div>
 
   <footer>
-    <p class="wordplaytext">W   O   R   D   P   L   A   Y</p>
-        <div class="linksfortabs">
-          <a class="links" href="aboutus.html">Home</a>
-          <a class="links" href="aboutus.html">About Us</a>
-          <a class="links" href="contact.html">Contact Us</a>
-        </div>
-        <div class="socialmediaiconsfooter">
-          <a href="https://www.facebook.com/sejal.khandelwal.31" target="_blank"><img class="footericonimage" src="Images\Contact Us\facebook.png" alt=""></a>
-          <a href="https://www.instagram.com/____wordplay___/" target="_blank"><img class="footericonimage" src="Images\Contact Us\instagram.png" alt=""></a>
-          <a href="mailto:sejalkhandelwal2000@gmail.com" target="_blank"><img class="footericonimage footergmail" src="Images\Contact Us\gmail.png" alt=""></a>
-        </div>
-          <!-- <br><br><br><br> -->
-          <h5>©WORDPLAY</h5>
+    <p class="wordplaytext">W O R D P L A Y</p>
+    <div class="linksfortabs">
+      <a class="links" href="aboutus.html">Home</a>
+      <a class="links" href="aboutus.html">About Us</a>
+      <a class="links" href="contact.html">Contact Us</a>
+    </div>
+    <div class="socialmediaiconsfooter">
+      <!-- <a href="https://www.facebook.com/sejal.khandelwal.31" target="_blank"><img class="footericonimage" src="Images\Contact Us\facebook.png" alt=""></a> -->
+      <a href="https://www.instagram.com/____wordplay___/" target="_blank"><img class="footericonimage" src="Images\Contact Us\instagram.png" alt=""></a>
+      <a href="mailto:sejalkhandelwal2000@gmail.com" target="_blank"><img class="footericonimage footergmail" src="Images\Contact Us\gmail.png" alt=""></a>
+    </div>
+    <!-- <br><br><br><br> -->
+    <h5>©WORDPLAY</h5>
 
   </footer>
 
